--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nilufe Reksi — Portfolio</title>
-  <meta name="description" content="Portfolio of Nilufe Reksi — projects, skills and contact." />
+  <title>Nilüfer Ekşinar — Portfolio</title>
+  <meta name="description" content="Portfolio of Nilüfer Ekşinar — projects, skills and contact." />
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="icon" href="assets/favicon.ico" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Nilufe Reksi</h1>
+      <h1 class="logo">Nilüfer Ekşinar</h1>
       <nav class="nav">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
@@ -22,7 +22,7 @@
 
   <main class="container">
     <section id="hero" class="hero">
-      <h2>Hi — I'm Nilufe</h2>
+      <h2>Hi — I'm Nilüfer Ekşinar</h2>
       <p>Developer • Designer • Problem solver. I build web apps and clean user experiences.</p>
       <p><a class="cta" href="#projects">See my work</a></p>
     </section>
@@ -64,7 +64,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <small>© <span id="year"></span> Nilufe Reksi — Built with GitHub Pages</small>
+      <small>© <span id="year"></span> Nilüfer Ekşinar — Built with GitHub Pages</small>
     </div>
   </footer>
 
