Add ux.js script to index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       <small>© <span id="year"></span> Nilüfer Ekşinar — Built with GitHub Pages</small>
     </div>
   </footer>
-
+  
+  <script src="assets/js/ux.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
