Revise hero section and about details
Updated personal information and skills description.

--- a/index.html
+++ b/index.html
@@ -23,19 +23,28 @@
   <main class="container">
     <section id="hero" class="hero">
       <h2>Hi — I'm Nilüfer Ekşinar</h2>
-      <p>Developer • Designer • Problem solver. I build web apps and clean user experiences.</p>
+      <p>Developer • Designer • Problem solver.</p>
       <p><a class="cta" href="#projects">See my work</a></p>
     </section>
 
     <section id="about" class="card">
       <h3>About</h3>
-      <p>Short bio: who you are, what you build, the tech you like, or what you're looking for.</p>
-      <ul class="skills">
-        <li>JavaScript / TypeScript</li>
-        <li>React / Next.js</li>
-        <li>Node.js / Express</li>
-        <li>HTML & CSS</li>
-      </ul>
+
+      <p class="lead">
+        I am a full‑stack developer who delivers production‑ready tools and demonstrators. My work spans signal processing, security utilities, data modeling, networking tooling, and predictive analytics; I prioritize maintainable code, thorough documentation, and reproducible deployment workflows.
+      </p>
+
+      <h4>What my projects say about me</h4>
+      <p>
+        My repositories reflect a pragmatic, results‑driven approach: focused prototypes, reusable utilities, and operational tooling applied across multiple domains.
+        I own projects end‑to‑end — from requirements and algorithm design to implementation, testing, and deployment.
+        Together they demonstrate an emphasis on measurable impact, reliability in production contexts, and continuous improvement through iteration and documentation.
+      </p>
+
+      <h4>Skills / stack</h4>
+      <p>
+        Python (NumPy, SciPy, librosa, pandas), Machine learning (scikit‑learn, TensorFlow/Keras), JavaScript/TypeScript (React), Databases (PostgreSQL, SQLite, SQLAlchemy), Security &amp; cryptography (SHA‑256, OpenSSL, bcrypt), Networking &amp; tooling (sockets, custom port scanners), DevOps &amp; CI/CD (Docker, GitHub Actions), Testing (pytest, Jest), Web deployment (GitHub Pages, static site tooling).
+      </p>
     </section>
 
     <!-- Projects: interactive grid rendered from assets/data/projects.json -->
@@ -60,7 +69,7 @@
 
     <section id="contact" class="card">
       <h3>Contact</h3>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+      <p>Email: <a href="mailto:you@example.com">refulin17353@gmail.com</a></p>
       <p>Or find me on <a href="https://github.com/nilufereksi" target="_blank" rel="noopener">GitHub</a> · <a href="#" target="_blank" rel="noopener">LinkedIn</a></p>
     </section>
   </main>
