Update skills section with additional experience
Added additional experience and tools to the skills section.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       <p>
         Python (NumPy, SciPy, librosa, pandas), Machine learning (scikit‑learn, TensorFlow/Keras), JavaScript/TypeScript (React), Databases (PostgreSQL, SQLite, SQLAlchemy), Security &amp; cryptography (SHA‑256, OpenSSL, bcrypt), Networking &amp; tooling (sockets, custom port scanners), DevOps &amp; CI/CD (Docker, GitHub Actions), Testing (pytest, Jest), Web deployment (GitHub Pages, static site tooling).
       </p>
+
+        <h4>Additional experience & tools</h4>
+  <ul>
+    <li>Testing: white‑box and black‑box testing (designing test cases, instrumentation, automated test scripts)</li>
+    <li>Languages: C, Python, JavaScript</li>
+    <li>Platforms &amp; tools: Linux, MySQL, XAMPP, phpMyAdmin, Jupyter Notebook, Streamlit</li>
+  </ul>
     </section>
 
     <!-- Projects: interactive grid rendered from assets/data/projects.json -->
