Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
     </section>
 
     <section id="contact" class="card">
-      <h3>Contact</h3>
-      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-      <p>Find me on <a href="https://github.com/nilufereksi" target="_blank" rel="noopener">GitHub</a> · <a href="#" target="_blank" rel="noopener">LinkedIn</a></p>
-    </section>
+  <h3>Contact</h3>
+  <p>Email: <a href="mailto:you@example.com">refulin17353@gmail.com</a></p>
+  <p>Find me on
+    <a href="https://github.com/nilufereksi" target="_blank" rel="noopener">GitHub</a>
+    ·
+    <a href="https://www.linkedin.com/in/nilüfer-ekşinar-a49911356" target="_blank" rel="noopener">LinkedIn</a>
+  </p>
+</section>
   </main>
 
   <div id="project-modal" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modal-title">
