Remove hero skills badges

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
           <h2 class="hero-title">Hi — I'm <strong>Nilüfer Ekşinar</strong></h2>
           <p class="hero-lead">I deliver production‑ready tools and demonstrators across signal processing, security utilities, data modeling, networking tooling, and predictive analytics.</p>
           <p class="hero-cta"><a class="cta" href="#projects">See my work</a></p>
-          <div class="hero-skills" aria-hidden="true">
-            <span>Python</span><span>Signal Processing</span><span>Security</span><span>Databases</span><span>ML</span>
-          </div>
         </div>
       </div>
     </section>
@@ -80,7 +77,7 @@
 
     <section id="contact" class="card">
   <h3>Contact</h3>
-  <p>Email: <a href="mailto:you@example.com">refulin17353@gmail.com</a></p>
+  <p>Email: <a href="mailto:refulin17353@gmail.com">refulin17353@gmail.com</a></p>
   <p>Find me on
     <a href="https://github.com/nilufereksi" target="_blank" rel="noopener">GitHub</a>
     ·
