--- a/index.html
+++ b/index.html
@@ -75,14 +75,56 @@
       </div>
     </section>
 
-    <section id="contact" class="card">
+    <section id="contact" class="card contact-card">
   <h3>Contact</h3>
-  <p>Email: <a href="mailto:refulin17353@gmail.com">refulin17353@gmail.com</a></p>
-  <p>Find me on
-    <a href="https://github.com/nilufereksi" target="_blank" rel="noopener">GitHub</a>
-    ·
-    <a href="https://www.linkedin.com/in/nilüfer-ekşinar-a49911356" target="_blank" rel="noopener">LinkedIn</a>
-  </p>
+
+  <p class="contact-lead">I’m available for freelance and contract work. Reach out for collaborations, consulting, or to see demos of my projects.</p>
+
+  <div class="contact-grid" role="list">
+    <div class="contact-item" role="listitem">
+      <div class="contact-meta">
+        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm0 4-8 5L4 8V6l8 5 8-5v2Z"/></svg>
+        <div class="contact-info">
+          <div class="label">Email</div>
+          <div class="value">
+            <button id="copy-email" class="link-like" aria-label="Copy email to clipboard">refulin17353@gmail.com</button>
+          </div>
+        </div>
+      </div>
+      <div class="contact-actions">
+        <button id="copy-email-btn" class="btn-ghost" title="Copy email">Copy</button>
+        <a class="btn" href="mailto:refulin17353@gmail.com" title="Send email">Send</a>
+      </div>
+    </div>
+
+    <div class="contact-item" role="listitem">
+      <div class="contact-meta">
+        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M12 .5C5.73.5.5 5.73.5 12S5.73 23.5 12 23.5 23.5 18.27 23.5 12 18.27.5 12 .5Zm3.08 16.55h-1.9c-.07 0-.17-.08-.19-.18l-.34-1.74c-.02-.1-.1-.18-.20-.18H8.97c-.09 0-.17.08-.20.18l-.34 1.74c-.02.1-.12.18-.19.18H6.36c-.07 0-.12-.08-.09-.15l.92-1.64c.05-.09.16-.15.27-.15h.93l1.16-5.22h-1.1c-.1 0-.18-.07-.2-.17L8.13 7.2c-.03-.1.03-.2.12-.23.13-.03.26.03.31.15l1.08 2.85c.04.1.13.16.23.16h3.58c.11 0 .2-.08.23-.19L15.7 7.1c.05-.12.17-.19.30-.16.09.02.15.11.12.20l-.62 2.84c-.03.1-.11.17-.21.17h-1.03l-1.1 5.22h2.34c.11 0 .21.06.26.15l.92 1.64c.03.08 0 .16-.07.16Z"/></svg>
+        <div class="contact-info">
+          <div class="label">GitHub</div>
+          <div class="value"><a class="link-like" href="https://github.com/nilufereksi" target="_blank" rel="noopener">github.com/nilufereksi</a></div>
+        </div>
+      </div>
+      <div class="contact-actions">
+        <a class="btn" href="https://github.com/nilufereksi" target="_blank" rel="noopener">View</a>
+      </div>
+    </div>
+
+    <div class="contact-item" role="listitem">
+      <div class="contact-meta">
+        <svg class="contact-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M20.45 20.45h-3.55V14.8c0-1.35-.03-3.08-1.88-3.08-1.88 0-2.17 1.47-2.17 2.98v5.75H8.37V9.5h3.41v1.52h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.53v6.75zM5.34 7.02a2.06 2.06 0 1 1 0-4.12 2.06 2.06 0 0 1 0 4.12zM7.11 20.45H3.57V9.5h3.54v10.95z"/></svg>
+        <div class="contact-info">
+          <div class="label">LinkedIn</div>
+          <div class="value"><a class="link-like" href="https://www.linkedin.com/in/nilüfer-ekşinar-a49911356" target="_blank" rel="noopener">linkedin.com/in/nilüfer-ekşinar-a49911356</a></div>
+        </div>
+      </div>
+      <div class="contact-actions">
+        <a class="btn" href="https://www.linkedin.com/in/nilüfer-ekşinar-a49911356" target="_blank" rel="noopener">Open</a>
+      </div>
+    </div>
+  </div>
+
+  <div id="contact-feedback" class="contact-feedback" role="status" aria-live="polite" hidden></div>
 </section>
   </main>
 
