--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
   <script src="assets/js/ux.js" defer></script>
   <script src="assets/js/main.js" defer></script>
+  <script src="assets/js/contact.js" defer></script>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
